now using QMarkdownTextEdit and did year 2018 code-update

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,8 +14,13 @@ find_package( Qt5Gui REQUIRED )
 find_package( Qt5Svg REQUIRED )
 
 qt5_wrap_ui(mainwindow.h mainwindow.ui)
+qt5_wrap_ui(libraries/qmarkdowntextedit/ui_qplaintexteditsearchwidget.h
+        libraries/qmarkdowntextedit/qplaintexteditsearchwidget.ui)
+qt5_wrap_ui(libraries/qttoolbareditor/src/toolbar_editor.hpp
+        libraries/qttoolbareditor/src/toolbar_editor.ui)
 
 set(RESOURCE_FILES
+        libraries/qmarkdowntextedit/media.qrc
         )
 
 qt5_add_resources(RESOURCE_ADDED ${RESOURCE_FILES})
@@ -26,8 +31,14 @@ set(SOURCE_FILES
     mainwindow.h
     mainwindow.ui
     version.h
+    libraries/qmarkdowntextedit/markdownhighlighter.cpp
+    libraries/qmarkdowntextedit/markdownhighlighter.h
+    libraries/qmarkdowntextedit/qmarkdowntextedit.cpp
+    libraries/qmarkdowntextedit/qmarkdowntextedit.h
+    libraries/qmarkdowntextedit/qplaintexteditsearchwidget.cpp
+    libraries/qmarkdowntextedit/qplaintexteditsearchwidget.h
+    libraries/qmarkdowntextedit/qplaintexteditsearchwidget.ui
 )
-
 
 add_executable(hswitch ${SOURCE_FILES} ${RESOURCE_ADDED} ${QON_QM_FILES})
 
