--- a/build-systems/snap/snapcraft/snapcraft.yaml
+++ b/build-systems/snap/snapcraft/snapcraft.yaml
@@ -3,6 +3,7 @@ version: "VERSION-STRING"
 summary: hosts file content switcher to modify your static ip addresses
 grade: stable
 confinement: strict
+base: core18
 description: |
   hswitch is a hosts file content switcher to modify your static ip addresses 
   quickly for development.
